# Translator_Protobuff

./: CMakeLists.txt  README.md
include/: convert_protobuff_to_structur.h  convert_structur_to_protobuff.h  incilDate.h  structurs.h
proto/: structurs.pb-c.c  structurs.pb-c.h  structurs.proto
src/: convert_protobuff_to_structur.c  convert_structur_to_protobuff.c  incilDate.c  main.c  protobuf-c.c
